<resources>
    <string name="app_name">مکان یاب تماس</string>
    <string name="sms_send">Sms Sent</string>
    <string name="sms_not_send">Sms Not Sent</string>
    <string name="sms_not_send_no_service">No Service</string>
    <string name="sms_not_send_no_radio">No Radio</string>
    <string name="call_status_icon">Call Status Icon</string>
    <string name="no_matching_result">شماره تلفن پیدا نشد!</string>
    <string name="instructional_code">کد دستوری</string>
    <string name="your_call_log_is_empty">تاریخچه تماس شما خالیست!</string>
    <string name="please_provide_call_log_permission_to_see_the_call_log">برای مشاهده تاریخچه تماس، لطفا دسترسی مورد نظر را از بخش تنظیمات فراهم کنید</string>
    <string name="call_log">تاریخچه تماس ها</string>
    <string name="search">جستجو</string>
    <string name="about_me">درباره من</string>
    <string name="permissions">دسترسی ها</string>
    <string name="github">github</string>
    <string name="linkedin">linkedin</string>
    <string name="website">website</string>
    <string name="app_description">مکان یاب تماس به صورت متن باز عرضه شده تا تمامی علاقه مندان به حوزه برنامه نویسی بتوانند کدهای آن را مشاهده و در صورت نیاز استفاده کنند.</string>
    <string name="technologies">تکنولوژی ها</string>
    <string name="technologies_description">Kotlin\nCoroutines\nMVVM\nArchitecture components\n(LiveData,ViewModel,Room)\Koin\nNavigation Component\nSingle Activity</string>
    <string name="contact_me">ارتباط با من</string>
    <string name="pouya_heydari">پویا حیدری</string>
    <string name="enter_your_phone_number">شماره تلفن مورد نظر را وارد نمایید</string>
    <string name="bullet">بولت</string>
    <string name="cant_track_rightel_and_irancell">شماره های ایرانسل و رایتل به دلیل یکسان بودن پیش شماره ها در تمام کشور قابلیت تشخیص مکان را ندارند.</string>
    <string name="dont_forget_to_enter_zip_code">برای بررسی مکان شماره های ثابت، حتما در ابتدا پیش شماره شهر مورد نظر را وارد نمایید.</string>
    <string name="wrong_number">شماره وارد شده اشتباه است و یا در بانک اطلاعاتی موجود نیست.</string>
    <string name="call_log_permission_description">این دسترسی برای نمایش مکان افرادی که تا به حال با شما تماس گرفته اند استفاده می شود</string>
    <string name="read_contacts_permission_description">این دسترسی برای نمایش نام محاطبین شما در تاریخجه تماس ها استفاده می شود</string>
    <string name="contacts">مخاطبین</string>
    <string name="all_permissions_are_granted">عالی! تمام دسترسی های مورد نیاز اپلیکیشن فراهم شده اند!</string>
    <string name="channel_name">اطلاع رسانی فعالیت سرویس</string>
    <string name="channel_description">این کانال برای نمایش نوتیفیکیشن های اطلاع رسانی در مورد فعالیت برنامه استفاده میشود</string>
    <string name="notification_description">مکان یاب تماس در حال اجراست</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="permission_request_description">برنامه برای اجرا شدن با تمام امکانات نیاز به دسترسی های زیر دارد. پیشنهاد می شود که تمام دسترسی های زیر را فراهم کنید:</string>
    <string name="skip">رد شدن</string>

</resources>
