<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/txt3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:justificationMode="inter_word"
            android:text="@string/app_description"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgTech"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/technologies"
            android:src="@drawable/ic_tech"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt3"
            app:tint="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/txtTech"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:gravity="start"
            android:text="@string/technologies"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@id/imgTech"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt3" />

        <TextView
            android:id="@+id/txtTechDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:lineSpacingExtra="8dp"
            android:text="@string/technologies_description"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/imgTech"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtTech" />

        <ImageView
            android:id="@+id/imgContact"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/contact_me"
            android:src="@drawable/ic_contact"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtTechDesc"
            app:tint="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/txtContact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:gravity="start"
            android:text="@string/contact_me"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@id/imgTech"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtTechDesc" />

        <TextView
            android:id="@+id/txtContactDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:gravity="start"
            android:text="@string/pouya_heydari"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@id/imgContact"
            app:layout_constraintTop_toBottomOf="@id/txtContact" />

        <ImageView
            android:id="@+id/imgGithub"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="32dp"
            android:contentDescription="@string/github"
            android:src="@drawable/ic_github"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imgContact"
            app:layout_constraintStart_toEndOf="@id/imgLinkedin"
            app:layout_constraintTop_toBottomOf="@id/txtContactDetails"
            app:tint="@color/githubColor" />

        <ImageView
            android:id="@+id/imgLinkedin"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="32dp"
            android:contentDescription="@string/linkedin"
            android:src="@drawable/ic_linkedin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/imgGithub"
            app:layout_constraintStart_toEndOf="@id/imgWebsite"
            app:layout_constraintTop_toBottomOf="@id/txtContactDetails" />

        <ImageView
            android:id="@+id/imgWebsite"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="32dp"
            android:contentDescription="@string/website"
            android:src="@drawable/ic_world"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/imgLinkedin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtContactDetails"
            app:tint="@color/colorPrimaryDark" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>